--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_bf_space		"Reduziere Zwischenraum (falls möglich)">
 <!ENTITY Ctr_noconicons		"Seitenkontextmenü: ersetze Symbole durch Namen (Zurück, Vor...)">
 <!ENTITY Ctr_altoptionsp	"Einstellungsseite (about:preferences): alternative Darstellung">
+<!ENTITY Ctr_altoptionsw	"Einstellungsseite (about:preferences) in einem Fenster öffnen">
 <!ENTITY Ctr_svgfilters		"SVG Farben für Symbole von 'Standard-Schaltflächen'">
 <!ENTITY Ctr_wincontrols	"Verschiebbare Fenster-Schaltflächen im Vollbild-Modus">
 <!ENTITY Ctr_emptyfavicon2	"Leeres Lesezeichensymbol durch Papierblattsymbol ersetzen">
