--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_bf_space		"Reduzir o Espaço Entre os Botões (Se Possível)">
 <!ENTITY Ctr_noconicons		"Substituir os Ícones do Menu de Contexto da Página por Rótulos (Voltar, Avançar, Parar, Recarregar, Página de Favoritos)">
 <!ENTITY Ctr_altoptionsp	"Options page (about:preferences): alternative appearance">
+<!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
 <!ENTITY Ctr_svgfilters		"Cores SVG para os Ícones dos Botões da Barra de Ferramentas Padrão">
 <!ENTITY Ctr_wincontrols	"Controles Móveis da Janela em Tela Cheia">
 <!ENTITY Ctr_emptyfavicon2	"Substituir o Favicon Genérico (Vazio e Pontilhado) Pelo Favicon de Folha">
