--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_bf_space		"Rum mjazy tłocaškami reducěrowaś (jolic móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstowego menija boka pśez pomjenjenja wuměniś (slědk, dalej, stoj, znowego, bok ako cytańske znamje składowaś)">
 <!ENTITY Ctr_altoptionsp	"Bok nastajenjow (about:preferences): alternatiwny wenkowny naglěd">
+<!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
 <!ENTITY Ctr_emptyfavicon2	"Prozny a dypkaty faworitowy symbol pśez łopjenowy symbol wuměniś">
