--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas (atrás, adelante...)">
 <!ENTITY Ctr_altoptionsp	"Página de opciones (about:preferences): Apariencia alternativa">
+<!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos de botones de barra de herramientas predeterminados">
 <!ENTITY Ctr_wincontrols	"Controles de ventana en pantalla completa móviles">
 <!ENTITY Ctr_emptyfavicon2	"Reemplazar favicon genérico (vacío y punteado) con uno de hoja en blanco">
