--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -111,8 +111,8 @@
 <!ENTITY Ctr_hide_bf_popup	"鼠标按下时隐藏历史菜单">
 <!ENTITY Ctr_bf_space		"减少按钮之间的空白 (如果可以)">
 <!ENTITY Ctr_noconicons		"页面右键菜单: 使用标签来替代图标 (后退, 前进...)">
-<!ENTITY Ctr_altoptionsp	"Options page (about:preferences): alternative appearance">
-<!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
+<!ENTITY Ctr_altoptionsp	"选项页面(about:preferences): 备选的外观>
+<!ENTITY Ctr_altoptionsw	"在窗口中打开选项页面(about:preferences)">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
 <!ENTITY Ctr_emptyfavicon2	"使用空白页面图标来代替常规图标(空白或虚线框)">
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_extraurlkeycb	"打开附加地址栏(Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"面板菜单: 隐藏按钮标签文本">
 <!ENTITY Ctr_menupopupscr	"弹出式菜单: 用滚动栏代替滚动箭头">
-<!ENTITY Ctr_closegeneral	"General close icons">
+<!ENTITY Ctr_closegeneral	"普通关闭图标">
 
 <!ENTITY Ctr_tabsep_def		"默认标签页分隔符">
 <!ENTITY Ctr_fxmockup		"&brandShortName; 样式">
@@ -195,7 +195,7 @@
 <!ENTITY Ctr_feedinurl		"RSS源按钮">
 <!ENTITY Ctr_hideurelstop	"隐藏停止和重新载入按钮">
 <!ENTITY Ctr_hideurlgo		"隐藏 “转到” 按钮">
-<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
+<!ENTITY Ctr_hideurlsrg		"隐藏 “重新载入，停止和转到” 按钮的分隔符与空白">
 <!ENTITY Ctr_urlbardropm	"下拉控件移动到地址栏尾部">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
@@ -243,7 +243,7 @@
 
 <!ENTITY Ctr_aerocolors		"主工具栏和标签页使用蓝色 Aero 颜色">
 <!ENTITY Ctr_transpttbw10	"标题/菜单/标签页工具栏: 移除背景颜色">
-<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
+<!ENTITY Ctr_transptcw10	"隐藏系统默认的 最小化/最大化/关闭 按钮">
 <!ENTITY Ctr_hidenavbar		"导航工具栏: 隐藏工具栏">
 <!ENTITY Ctr_nobookbarbg	"书签工具栏: 移除背景颜色">
 <!ENTITY Ctr_bookbarfs		"书签工具栏: 在全屏模式">
