--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -245,11 +245,14 @@
 <!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
 <!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Hide toolbar">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
 <!ENTITY Ctr_nobookbarbg	"Remove background color">
 <!ENTITY Ctr_bookbarfs		"In fullscreen mode">
 <!ENTITY Ctr_nonavbarbg		"Remove background color">
 <!ENTITY Ctr_nonavbarbg1	"This add-on's additional toolbars and other top toolbars are affected.">
-<!ENTITY Ctr_nonavbarbg2	"All toolbars in 'The Fox, Only Better' add-on's Slim Chrome are affected.">
+<!ENTITY Ctr_nonavbarbg2	"All toolbars in 'Beyond Australis' add-on's 'Slim Chrome' are affected.">
 <!ENTITY Ctr_nonavborder	"Add top border to toolbar">
 <!ENTITY Ctr_nonavtbborder	"Top toolbars: remove toolbar borders">
 <!ENTITY Ctr_hidesbclose	"Sidebars: hide sidebar close button">
