--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -245,6 +245,9 @@
 <!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
 <!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Masquer la barre de navigation">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
 <!ENTITY Ctr_nobookbarbg	"Barre personnelle : enlever l'arrière-plan">
 <!ENTITY Ctr_bookbarfs		"Barre personnelle : en mode plein écran">
 <!ENTITY Ctr_nonavbarbg		"Barre de navigation : enlever l'arrière-plan">
