--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -245,6 +245,9 @@
 <!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
 <!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Navigationslinjen: skjul værktøjslinje">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
 <!ENTITY Ctr_nobookbarbg	"Bogmærkelinje: fjern baggrundsfarve">
 <!ENTITY Ctr_bookbarfs		"Bogmærkelinje: i fuldskærmstilstand">
 <!ENTITY Ctr_nonavbarbg		"Navigationslinje: fjern baggrundsfarve">
