--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -10,7 +10,7 @@
 <!ENTITY Ctr_flexspace		"Ευέλικτο διάστημα">
 <!ENTITY Ctr_space			"Διάστημα">
 <!ENTITY Ctr_separator		"Διαχωριστικό">
-<!ENTITY Ctr_puibseparator	"Διαχωριστικό (για το μενού πίνακα)">
+<!ENTITY Ctr_puibseparator	"Διαχωριστικό (για το κουμπί του κύριου μενού πίνακα)">
 <!ENTITY Ctr_navthrobber	"Ενδείκτης δραστηριότητας">
 <!ENTITY Ctr_sidebarbutton	"(Πλευρική στήλη)">
 <!ENTITY Ctr_windowcontrols	"Ελαχιστοποίηση/επαναφορά/κλείσιμο (Πλήρης οθόνη)">
@@ -79,7 +79,7 @@
 <!ENTITY Ctr_appbutton2		"Στη γραμμή τίτλου του [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Στη γραμμή τίτλου του [&brandShortName;] (σε απόκρυψη)">
 <!ENTITY Ctr_appbutton2io	"Στη γραμμή τίτλου του [&brandShortName;] (μόνο εικονίδιο)">
-<!ENTITY Ctr_paneluibtweak	"Πορτοκαλί κουμπί μενού πίνακα στην εργαλειοθήκη καρτελών">
+<!ENTITY Ctr_paneluibtweak	"Εμφάνιση κουμπιού κύριου μενού πίνακα ως κουμπί εφαρμογής, όταν βρίσκεται στην εργαλειοθήκη καρτελών">
 <!ENTITY Ctr_appbuttonc_o	"Πορτοκαλί χρώμα κουμπιού (προεπιλογή)">
 <!ENTITY Ctr_appbuttonc_a	"Μπλε χρώμα κουμπιού (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Μαύρο χρώμα κουμπιού (Nightly)">
@@ -95,7 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Δεν είναι ορατό στη γραμμή τίτλου του Λ.Σ. Windows, μόνο στη γραμμή τίτλου του &brandShortName;!">
 <!ENTITY Ctr_appbuttonI2	"Τα χρώματα του κουμπιού είναι ορατά μόνο στη γραμμή τίτλου και στην εργαλειοθήκη καρτελών!">
 <!ENTITY Ctr_appbutmhi		"Υψηλότερη θέση (εάν είναι στην εργαλειοθήκη καρτελών)">
-<!ENTITY Ctr_appbautocol	"Ορισμός προεπιλεγμένου χρώματος / Aurora / Nightly αυτόματα">
+<!ENTITY Ctr_appbautocol	"Ορισμός χρώματος καναλιού περιηγητή αυτόματα (Προεπιλεγμένο/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Απόκρυψη περιγραμμάτων και χρωμάτων φόντου">
 <!ENTITY Ctr_dblclclosefx	"Κλείσιμο τρέχοντος παραθύρου με διπλό κλικ">
 <!ENTITY Ctr_appbclmmenus	"Επιλέξιμα με κλικ μενού, μέσα στο μενού του κουμπιού («Νέα καρτέλα», «Εκτύπωση…»)">
@@ -111,8 +111,8 @@
 <!ENTITY Ctr_hide_bf_popup	"Απόκρυψη αναδυόμενου μενού ιστορικού κουμπιών κατά το πάτημά τους">
 <!ENTITY Ctr_bf_space		"Μείωση διαστήματος μεταξύ των κουμπιών (εάν είναι δυνατόν)">
 <!ENTITY Ctr_noconicons		"Μενού περιεχομένου σελίδας: αντικατάσταση εικονιδίων με ετικέτες («Πίσω», «Μπροστά», «Διακοπή», «Ανανέωση», «Η σελίδα ως σελιδοδείκτης»)">
-<!ENTITY Ctr_altoptionsp	"Options page (about:preferences): alternative appearance">
-<!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
+<!ENTITY Ctr_altoptionsp	"Σελίδα επιλογών (about:preferences): εναλλακτική εμφάνιση">
+<!ENTITY Ctr_altoptionsw	"Άνοιγμα σελίδας επιλογών (about:preferences) σε παράθυρο">
 <!ENTITY Ctr_svgfilters		"Χρώματα SVG για προεπιλεγμένα εικονίδια κουμπιών εργαλειοθήκης">
 <!ENTITY Ctr_wincontrols	"Μετακινήσιμα στοιχεία ελέγχου παραθύρου σε προβολή πλήρους οθόνης">
 <!ENTITY Ctr_emptyfavicon2	"Αντικατάσταση γενικού εικονιδίου (κενό και διάστικτο) με εικονίδιο φύλλου">
@@ -123,7 +123,7 @@
 <!ENTITY Ctr_mstatusbarabr	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «The Addon Bar (Restored)»">
 <!ENTITY Ctr_combrelstop	"Κουμπιά «Διακοπή» &amp; «Ανανέωση»: συνδυασμός κουμπιών στην εργαλειοθήκη">
 <!ENTITY Ctr_stoprel1		"Σημαντικό: τοποθετήστε το κουμπί «Ανανέωση» μετά από το κουμπί «Διακοπή»!">
-<!ENTITY Ctr_panelmenucol	"Μενού πίνακα: εναλλακτικό χρώμα φόντου">
+<!ENTITY Ctr_panelmenucol	"Αναδυόμενα μενού πίνακα: εναλλακτικό χρώμα φόντου">
 <!ENTITY Ctr_hideprivmask	"Ιδιωτική περιήγηση: απόκρυψη ενδείκτη-μάσκα">
 <!ENTITY Ctr_nbisizedelay	"ms καθυστέρηση εκτέλεσης (1000 ms = 1 δευτερόλεπτο)">
 <!ENTITY Ctr_findbar		"Θέση γραμμής εύρεσης">
@@ -137,24 +137,24 @@
 <!ENTITY Ctr_nav_txt_ico3	"Εμφάνιση μόνο κειμένου">
 <!ENTITY Ctr_nav_txt_exp	"Πειραματικά χαρακτηριστικά:">
 <!ENTITY Ctr_iat_notf_vt	"Εξαιρούνται κατακόρυφες εργαλειοθήκες">
-<!ENTITY Ctr_cpanelmenus	"Μενού πίνακα: συνεπτυγμένη προβολή (σελιδοδείκτες, ιστορικό κλπ.)">
+<!ENTITY Ctr_cpanelmenus	"Αναδυόμενα μενού πίνακα (σελιδοδείκτες, ιστορικό κλπ): συνεπτυγμένη προβολή">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_alt_newtabp	"Σελίδα νέας καρτέλας (about:newtab): εναλλακτική εμφάνιση">
 <!ENTITY Ctr_addonmanager	"Διαχειριστής πρόσθετων">
-<!ENTITY Ctr_alt_addonsp	"Σελίδα επεκτάσεων «Περισσότερα»: εναλλακτική εμφάνιση">
-<!ENTITY Ctr_alt_addonsm	"Διαχειριστής πρόσθετων: εναλλακτική εμφάνιση">
-<!ENTITY Ctr_am_nowarning	"Λίστες πρόσθετων διαχειριστή πρόσθετων: απόκρυψη προειδοποιήσεων">
-<!ENTITY Ctr_addonversion	"Λίστες πρόσθετων διαχειριστή πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
-<!ENTITY Ctr_xpinstallui	"Διαχειριστής πρόσθετων: παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Μενού κουμπιού-μενού σελιδοδεικτών: εμφάνιση μενού πίνακα">
+<!ENTITY Ctr_alt_addonsp	"Σελίδα «Περισσότερα»: εναλλακτική σειρά περιεχομένου">
+<!ENTITY Ctr_alt_addonsm	"Εναλλακτική εμφάνιση">
+<!ENTITY Ctr_am_nowarning	"Λίστες πρόσθετων: απόκρυψη προειδοποιήσεων">
+<!ENTITY Ctr_addonversion	"Λίστες πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
+<!ENTITY Ctr_xpinstallui	"Παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση about:config)">
+<!ENTITY Ctr_bmbutpanelm	"Μενού κουμπιού-μενού σελιδοδεικτών: εμφάνιση ως αναδυόμενο μενού πίνακα">
 <!ENTITY Ctr_bmbutnotext	"Κουμπί-μενού σελιδοδεικτών: απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
 <!ENTITY Ctr_tbconmenu		"Μενού περιεχομένου εργαλειοθήκης: Απόκρυψη «Μετακίνηση στο μενού», «Απομάκρυνση από την εργαλειοθήκη», «Ανανέωση όλων των καρτελών», «Όλες οι καρτέλες σε σελιδοδείκτη…» και «Αναίρεση κλεισίματος καρτέλας»">
 <!ENTITY Ctr_noresizerxp	"Απόκρυψη λαβής αλλαγής μεγέθους του παραθύρου (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Άνοιγμα επιπρόσθετης γραμμής τοποθεσιών (Cmd/Ctrl+">
-<!ENTITY Ctr_pmhidelabels	"Μενού πίνακα: απόκρυψη ετικετών κουμπιών">
+<!ENTITY Ctr_pmhidelabels	"Κύριο αναδυόμενο μενού πίνακα: απόκρυψη ετικετών κουμπιών">
 <!ENTITY Ctr_menupopupscr	"Αναδυόμενα μενού: εμφάνιση γραμμών κύλισης αντί για βέλη κύλισης">
-<!ENTITY Ctr_closegeneral	"General close icons">
+<!ENTITY Ctr_closegeneral	"Γενικά εικονίδια κλεισίματος">
 
 <!ENTITY Ctr_tabsep_def		"Προεπιλεγμένα διαχωριστικά καρτελών">
 <!ENTITY Ctr_fxmockup		"Μακέτα &brandShortName;">
@@ -195,7 +195,7 @@
 <!ENTITY Ctr_feedinurl		"Κουμπί «Συνδρομή» (RSS)">
 <!ENTITY Ctr_hideurelstop	"Απόκρυψη κουμπιών «Διακοπή» &amp; «Ανανέωση»">
 <!ENTITY Ctr_hideurlgo		"Απόκρυψη κουμπιού «Μετάβαση»">
-<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
+<!ENTITY Ctr_hideurlsrg		"Απόκρυψη διαχωριστικών &amp; διαστημάτων κουμπιών «Ανανέωση», «Διακοπή» &amp; «Μετάβαση»">
 <!ENTITY Ctr_urlbardropm	"Μετακίνηση του δείκτη ανάπτυξης στο τέλος της γραμμής τοποθεσιών">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
 <!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
@@ -203,7 +203,7 @@
 <!ENTITY Ctr_faviconurl		"Εικονίδιο URL: τρέχον εικονίδιο τοποθεσιών">
 <!ENTITY Ctr_padlock		"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις">
 <!ENTITY Ctr_padlock_hid	"κρυμμένο">
-<!ENTITY Ctr_padlock_def	"προεπιλογή">
+<!ENTITY Ctr_padlock_def	"προεπιλεγμένο">
 <!ENTITY Ctr_padlock_cla	"κλασικό">
 <!ENTITY Ctr_padlock_mod	"μοντέρνο">
 <!ENTITY Ctr_padlock_ext	"Εικονίδια ασφάλειας">
@@ -226,7 +226,7 @@
 <!ENTITY Ctr_mbarforceright	"Ως τελευταίο στοιχείο">
 
 <!ENTITY Ctr_toolbars		"Εργαλειοθήκες">
-<!ENTITY Ctr_dblclnewtab	"Άνοιγμα νέας καρτέλας με διπλό κλικ (χρήση browser.newtab.url)">
+<!ENTITY Ctr_dblclnewtab	"Άνοιγμα νέας καρτέλας με διπλό κλικ">
 <!ENTITY Ctr_hidetbwot		"Απόκρυψη εργαλειοθήκης καρτελών με μόνο μία ορατή καρτέλα">
 <!ENTITY Ctr_hidetbwote		"Μείωση καθυστέρησης απόκρυψης κατά την εκκίνηση">
 <!ENTITY Ctr_hidetbwote_i	"Ενδέχεται να προκαλέσει δυσλειτουργίες στην εργαλειοθήκη καρτελών">
@@ -243,14 +243,17 @@
 
 <!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες (και καρτέλες)">
 <!ENTITY Ctr_transpttbw10	"Τίτλος/μενού/εργαλειοθήκη καρτελών: απομάκρυνση χρώματος φόντου">
-<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
-<!ENTITY Ctr_hidenavbar		"Εργαλειοθήκη πλοήγησης: απόκρυψη εργαλειοθήκης">
-<!ENTITY Ctr_nobookbarbg	"Εργαλειοθήκη σελιδοδεικτών: Απομάκρυνση χρώματος φόντου">
-<!ENTITY Ctr_bookbarfs		"Εργαλειοθήκη σελιδοδεικτών: εμφάνιση σε προβολή πλήρους οθόνης">
-<!ENTITY Ctr_nonavbarbg		"Εργαλειοθήκη πλοήγησης: Απομάκρυνση χρώματος φόντου">
+<!ENTITY Ctr_transptcw10	"Απόκρυψη προεπιλεγμένων κουμπιών ΛΣ ελαχιστοποίηση/μεγιστοποίηση/κλείσιμο">
+<!ENTITY Ctr_hidenavbar		"Απόκρυψη εργαλειοθήκης">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
+<!ENTITY Ctr_nobookbarbg	"Απομάκρυνση χρώματος φόντου">
+<!ENTITY Ctr_bookbarfs		"Εμφάνιση σε προβολή πλήρους οθόνης">
+<!ENTITY Ctr_nonavbarbg		"Απομάκρυνση χρώματος φόντου">
 <!ENTITY Ctr_nonavbarbg1	"Επηρεάζονται επίσης οι επιπρόσθετες εργαλειοθήκες αυτής της επέκτασης και άλλες εργαλειοθήκες κορυφής.">
 <!ENTITY Ctr_nonavbarbg2	"Επηρεάζονται όλες οι εργαλειοθήκες σε λειτουργία «Slim Chrome» της επέκτασης «The Fox, Only Better».">
-<!ENTITY Ctr_nonavborder	"Εργαλειοθήκη σελιδοδεικτών: προσθήκη περιγράμματος κορυφής στην εργαλειοθήκη">
+<!ENTITY Ctr_nonavborder	"Προσθήκη περιγράμματος κορυφής στην εργαλειοθήκη">
 <!ENTITY Ctr_nonavtbborder	"Εργαλειοθήκες κορυφής: Απομάκρυνση περιγραμμάτων εργαλειοθήκης">
 <!ENTITY Ctr_hidesbclose	"Πλευρικές στήλες: απόκρυψη κουμπιού κλεισίματος πλευρικής στήλης">
 <!ENTITY Ctr_notextshadow	"Εργαλειοθήκες: απόκρυψη σκιάς κειμένου εργαλειοθηκών και καρτελών">
@@ -285,7 +288,7 @@
 <!ENTITY Ctr_fx34loop		"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνονται οι δυνατότητες «κλήσης και συνομιλίας».">
 <!ENTITY Ctr_fx35devtheme	"Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιείται το «Θέμα για προγραμματιστές».">
 <!ENTITY Ctr_fx36prefs		"Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται το παλιό παράθυρο επιλογών.">
-<!ENTITY Ctr_fx36prefs2		"Note: Old preference window does not contain all recently added browser preferences!">
+<!ENTITY Ctr_fx36prefs2		"Σημείωση: Το παλιό παράθυρο επιλογών δεν περιέχει όλες τις προσφάτως προστεθείσες επιλογές του περιηγητή!">
 <!ENTITY Ctr_fx38reader		"Αποεπιλέγοντας αυτή την προτίμηση απενεργοποιείται η «λειτουργία ανάγνωσης» και απομακρύνεται το εικονίδιό της από τη γραμμή τοποθεσιών.">
 <!ENTITY Ctr_fx38pocket		"Αποεπιλέγοντας αυτή την προτίμηση απενεργοποιείται το χαρακτηριστικό «Pocket» και απομακρύνεται το κουμπί του από τις εργαλειοθήκες.">
 <!ENTITY Ctr_fx38pocket2	"Σημείωση: Μετακινώντας το κουμπί του «Pocket» στην παλέτα προσαρμογής πριν από την απενεργοποίηση αυτής της προτίμησης, απομακρύνονται επίσης και οι καταχωρίσεις του «Pocket» από τα μενού σελιδοδεικτών και αναγνώστη.">
