--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -245,6 +245,9 @@
 <!ENTITY Ctr_transpttbw10	"Barra de título/menú/pestañas: Eliminar color de fondo">
 <!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Ocultar barra de navegación">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
 <!ENTITY Ctr_nobookbarbg	"Barra de marcadores: Eliminar color de fondo">
 <!ENTITY Ctr_bookbarfs		"Barra de marcadores: En modo pantalla completa">
 <!ENTITY Ctr_nonavbarbg		"Barra de navegación: Eliminar color de fondo">
