--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -245,6 +245,9 @@
 <!ENTITY Ctr_transpttbw10	"Tiitli-/menüü-/kaartide riba: eemalda taustavärv">
 <!ENTITY Ctr_transptcw10	"Peida vaikimisi op-süsteemi min/max/sulge nupud">
 <!ENTITY Ctr_hidenavbar		"Aadressiriba: peida tööriistariba">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
 <!ENTITY Ctr_nobookbarbg	"Järjehoidjate riba: eemalda taustavärv">
 <!ENTITY Ctr_bookbarfs		"Järjehoidjate riba: täisekraani režiimis">
 <!ENTITY Ctr_nonavbarbg		"Aadressiriba: eemalda taustavärv">
