--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -245,6 +245,9 @@
 <!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
 <!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Ocultar a Barra de Navegação">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
 <!ENTITY Ctr_nobookbarbg	"Barra de Favoritos: Remover a Cor do Fundo">
 <!ENTITY Ctr_bookbarfs		"Barra de Favoritos: No Modo de Tela Cheia">
 <!ENTITY Ctr_nonavbarbg		"Barra de Navegação: Remover a Cor do Fundo">
