--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -245,6 +245,9 @@
 <!ENTITY Ctr_transpttbw10	"标题/菜单/标签页工具栏: 移除背景颜色">
 <!ENTITY Ctr_transptcw10	"隐藏系统默认的 最小化/最大化/关闭 按钮">
 <!ENTITY Ctr_hidenavbar		"导航工具栏: 隐藏工具栏">
+<!ENTITY Ctr_navbarpad		"Additional left and right padding">
+<!ENTITY Ctr_navbarpad_l	"Left: ">
+<!ENTITY Ctr_navbarpad_r	"Right: ">
 <!ENTITY Ctr_nobookbarbg	"书签工具栏: 移除背景颜色">
 <!ENTITY Ctr_bookbarfs		"书签工具栏: 在全屏模式">
 <!ENTITY Ctr_nonavbarbg		"导航工具栏: 移除背景颜色">
