--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -245,14 +245,14 @@
 <!ENTITY Ctr_transpttbw10	"Tiitli-/menüü-/kaartide riba: eemalda taustavärv">
 <!ENTITY Ctr_transptcw10	"Peida vaikimisi op-süsteemi min/max/sulge nupud">
 <!ENTITY Ctr_hidenavbar		"Aadressiriba: peida tööriistariba">
-<!ENTITY Ctr_navbarpad		"Additional left and right padding">
-<!ENTITY Ctr_navbarpad_l	"Left: ">
-<!ENTITY Ctr_navbarpad_r	"Right: ">
+<!ENTITY Ctr_navbarpad		"Lisatühimik vasakul ja paremal">
+<!ENTITY Ctr_navbarpad_l	"Vasakul: ">
+<!ENTITY Ctr_navbarpad_r	"Paremal: ">
 <!ENTITY Ctr_nobookbarbg	"Järjehoidjate riba: eemalda taustavärv">
 <!ENTITY Ctr_bookbarfs		"Järjehoidjate riba: täisekraani režiimis">
 <!ENTITY Ctr_nonavbarbg		"Aadressiriba: eemalda taustavärv">
 <!ENTITY Ctr_nonavbarbg1	"Mõjutab selle laienduse lisa-tööriistaribasid ja teisi ülemisi tööriistaribasid.">
-<!ENTITY Ctr_nonavbarbg2	"Mõjutab kõiki laienduse 'The Fox, Only Better' Slim Chrome'i tööriistaribasid.">
+<!ENTITY Ctr_nonavbarbg2	"Mõjutab kõiki laienduse 'Beyond Australis' Slim Chrome'i tööriistaribasid.">
 <!ENTITY Ctr_nonavborder	"Järjehoidjate riba: lisa ribale ülemine piirjoon">
 <!ENTITY Ctr_nonavtbborder	"Ülemised tööriistaribad: eemalda tööriistariba piirjooned">
 <!ENTITY Ctr_hidesbclose	"Külgribad: peida külgriba sulgemise nupp">
